tests/bug_detector_tests/wrongThisType2.test
################################################################################
#    Copyright (c) 2013-2014, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=wrongThisType2
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector-loc
bug-detector-loc_out_WCIequals=\
noStop mode enabled.\n\
 \n\
* Bug Detector * \n\
wrongThisType2.js:5:5~5:16: [TypeError] Native function 'Number.prototype.toFixed' is called when its 'this' value is not of the expected object type.\n\
wrongThisType2.js:10:5~10:15: [TypeError] Native function 'Date.prototype.getDay' is called when its 'this' value is not of the expected object type.\n\
wrongThisType2.js:15:5~15:13: [TypeError] Native function 'RegExp.prototype.test' is called when its 'this' value is not of the expected object type.\n\
wrongThisType2.js:15:5~15:13: [Warning] Too few arguments to function 'RegExp.prototype.test'.\n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      3 ( 75.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      1 ( 25.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      1 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      0 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      3 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector-loc_err_equals=
