tests/bug_detector_tests/wrongThisType2.js
var x = {};

//if (Math.random()) {
    x.toFixed = Number.prototype.toFixed;
    x.toFixed();
//}

//if (Math.random()) {
    x.getDay = Date.prototype.getDay;
    x.getDay();
//}

//if (Math.random()) {
    x.test = RegExp.prototype.test;
    x.test();
//}
